--- a/src/Layouts/Main/main-styles.css
+++ b/src/Layouts/Main/main-styles.css
@@ -32,10 +32,75 @@
 
 .content__information {
   display: flex;
+  flex-direction: column;
   width: 100vw;
-  padding: 0 0 30px 0;
   margin-top: 100px;
-  background-color: #F0F1F6;
+  padding-bottom: 150px;
+  background-color: #f0f1f6;
+}
+
+.content__advance-statistics {
+  display: flex;
+  width: 100vw;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.content__advance-statistics h3 {
+  margin: 0;
+  font-size: 32px;
+  font-weight: 700;
+  color: #37343f;
+}
+
+.content__advance-statistics p {
+  width: 45%;
+  text-align: center;
+}
+
+.content__advance-statistics-card-container {
+  display: flex;
+  width: 100vw;
+}
+
+.content__advance-statistics-card-list {
+  width: 100%;
+  height: 350px;
+  display: flex;
+  position: relative;
+  align-items: flex-start;
+  padding: 80px 5%;
+}
+
+.content__advance-statistics-card-list::before {
+  content: "";
+  width: 90%;
+  height: 5px;
+  background-color: #2fd1cd;
+  position: absolute;
+  top: 50%;
+  bottom: 50%;
+  z-index: 1;
+}
+
+@media screen and (max-width: 768px) {
+  .content__advance-statistics p {
+    width: min(50% + 100px, 840px);
+  }
+
+  .content__advance-statistics-card-list {
+    flex-direction: column;
+    align-items: center;
+    height: auto;
+  }
+
+  .content__advance-statistics-card-list::before {
+    width: 7px;
+    height: 80%;
+    top: 10%;
+    bottom: 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
